# cmd/product/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api/v1
 definitions:
   application.AssignRoleRequest:
     properties:
@@ -319,8 +320,19 @@ definitions:
       success:
         type: boolean
     type: object
+host: localhost:8081
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  description: Product Service API with RBAC support
+  license:
+    name: MIT
+    url: https://opensource.org/licenses/MIT
+  termsOfService: http://swagger.io/terms/
+  title: Product Service API
+  version: "1.0"
 paths:
   /admin/products:
     post:
@@ -971,4 +983,10 @@ paths:
       summary: Validate JWT token
       tags:
       - users
+securityDefinitions:
+  BearerAuth:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
